<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/decor2_dp"
    android:clipToPadding="false"
    android:paddingHorizontal="@dimen/decor2_dp"
    android:paddingVertical="@dimen/decor3_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/defaultCurrencyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_btn"
        android:elevation="@dimen/shadow_dp"
        android:padding="@dimen/decor3_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4">

        <TextView
            android:id="@+id/default_currency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/base_name"
            android:textColor="@color/text_main"
            android:textSize="@dimen/title1_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/default_currency_value"
            android:layout_width="@dimen/default_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/decor1_dp"
            android:inputType="numberDecimal"
            android:textColor="@color/text_main"
            android:textSize="@dimen/title2_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/default_currency_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/flip_ico"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/decor1_dp"
        android:contentDescription="@string/exchange"
        android:src="@drawable/ic_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectedCurrencyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_btn"
        android:elevation="@dimen/shadow_dp"
        android:padding="@dimen/decor3_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4">


        <TextView
            android:id="@+id/selected_currency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/currency_code"
            android:textColor="@color/text_main"
            android:textSize="@dimen/title1_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/selected_currency_value"
            android:layout_width="@dimen/default_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/decor1_dp"
            android:inputType="numberDecimal"
            android:textColor="@color/text_main"
            android:textSize="@dimen/title2_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_currency_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exchange_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/decor1_dp"
        android:background="@drawable/radius_btn"
        android:enabled="false"
        android:paddingVertical="@dimen/decor3_dp"
        android:text="@string/exchange"
        android:textAllCaps="false"
        android:textColor="@color/text_main"
        android:textSize="@dimen/title2_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedCurrencyLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>

